# mapping

./: .gitignore  CMakeLists.txt  README.md  data.et_sig  data.m_sig  data.sr_allo_sig  data.sr_disp_sig  data.sr_swap_sig  display_res_exp1.py  performance_ratio.txt  res.txt  tags
benchmarks/bench_1/: bench_1.cpp
benchmarks/example/: example.cpp
benchmarks/k_500/: k_500.cpp
benchmarks/wcrt/: wcrt.cpp
exp/dse/: dse.cpp
exp/exp1/: exp1.cpp
exp/exp2/: exp2.cpp
exp/exp3/: exp3.cpp
exp/map/: map.cpp
exp/pa/: ba.cpp  pa.cpp
exp/phi/: phi.cpp
exp/phi_h/: phi_h.cpp
exp/phi_nh/: phi_nh.cpp
gen_task/: gen  gen.cpp
include/: augmentation.h  bench.h  communication.h  exp.h  file.h  generator.h  let.h  mapping.h  model.h  optimization.h  placement.h  print.h  sched_analysis.h  stats.h  ucases.h
res/: data.et_sig  data.m_sig  data.sr_allo_sig  data.sr_disp_sig  data.sr_swap_sig
src/: CMakeLists.txt  augmentation.cpp  bench.cpp  bfdu.cpp  bfdu_f.cpp  communication.cpp  exp.cpp  ffdu.cpp  ffdu_f.cpp  file.cpp  frst_f.cpp  generator.cpp  let.cpp  mapping.cpp  model.cpp  optimization.cpp  placement.cpp  print.cpp  sched_analysis.cpp  stats.cpp  ucases.cpp  wfdu.cpp  wfdu_f.cpp
tests/ba/: ba.cpp
tests/ex_case_study/: ex_case_study.cpp
tests/ex_eden/: ex_eden.cpp
tests/ex_normal/: CMakeLists.txt  ex_normal.cpp
tests/ex_sigcomp/: ex_sigcomp.cpp
tests/example/: example.cpp
tests/example_prmsig/: CMakeLists.txt  example_prmsig.cpp
tests/wcrt/: CMakeLists.txt  wcrt.cpp
wcrt/: wcrt.cpp
